@@ -1,7 +1,12 @@
-$NetBSD: CHANGES,v 1.24 2016/08/20 00:36:41 mrg Exp $
+$NetBSD: CHANGES,v 1.25 2017/01/31 14:33:54 mrg Exp $
+
+changes in bozohttpd 20170201:
+	o  fix an infinite loop in cgi processing
+	o  fixes and clean up for the testsuite
+	o  no longer sends encoding header for compressed formats
 
 changes in bozohttpd 20160517:
-	o add a bozo_get_version() function which returns the version number
+	o  add a bozo_get_version() function which returns the version number
 
 changes in bozohttpd 20160415:
 	o  add search-word support for CGI
